--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.16.3",
         "express-session": "^1.15.6",
         "mysql": "^2.15.0",
+        "socket.io": "^2.1.0",
         "twig": "^1.10.5"
     }
 }
