--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "author": "Dianophe",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.18.2",
+        "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
         "express-session": "^1.15.6",
-        "moment": "^2.22.0",
-        "mysql": "^2.15.0",
-        "socket.io": "^2.1.0",
-        "twig": "^1.10.5"
+        "moment": "^2.22.2",
+        "mysql": "^2.16.0",
+        "nodemon": "^1.18.4",
+        "socket.io": "^2.1.1",
+        "twig": "^1.12.0"
     }
 }
