--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
-        "express": "^4.16.3",
+        "express": "^4.16.4",
         "express-session": "^1.15.6",
+        "formidable": "^1.2.1",
         "moment": "^2.22.2",
         "mysql": "^2.16.0",
-        "nodemon": "^1.18.4",
+        "ng-file-upload": "^12.2.13",
+        "nodemon": "^1.18.6",
         "socket.io": "^2.1.1",
         "twig": "^1.12.0"
+    },
+    "devDependencies": {
+        "eslint": "^5.9.0",
+        "eslint-config-google": "^0.11.0"
     }
 }
