--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
         "start": "nodemon -e js,json,html,css"
     },
     "keywords": [],
-    "author": "Dianophe",
+    "author": "Kifran",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
-        "formidable": "^1.2.1",
         "moment": "^2.22.2",
         "mysql": "^2.16.0",
         "ng-file-upload": "^12.2.13",
