--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
         "no-unused-vars": "warn",
         "linebreak-style": "off",
         "max-len": "off",
-        "new-cap": "off"
+        "new-cap": "off",
+        "prefer-const": "off",
+        "valid-jsdoc": "off"
     }
 }
