--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.18.3",
-        "cookie-parser": "^1.4.3",
+        "cookie-parser": "^1.4.4",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
-        "moment": "^2.22.2",
+        "moment": "^2.24.0",
+        "multer": "^1.4.1",
         "mysql": "^2.16.0",
         "ng-file-upload": "^12.2.13",
-        "nodemon": "^1.18.6",
-        "socket.io": "^2.1.1",
-        "twig": "^1.12.0"
+        "nodemon": "^1.18.10",
+        "socket.io": "^2.2.0",
+        "twig": "^1.13.2"
     },
     "devDependencies": {
-        "eslint": "^5.9.0",
+        "eslint": "^5.15.1",
         "eslint-config-google": "^0.11.0"
     }
 }
