--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.4",
         "express": "^4.16.4",
+        "express-fileupload": "^1.2.0",
         "express-session": "^1.15.6",
+        "formidable": "^1.2.2",
+        "fs": "^0.0.1-security",
         "moment": "^2.24.0",
         "multer": "^1.4.1",
         "mysql": "^2.16.0",
         "ng-file-upload": "^12.2.13",
-        "nodemon": "^1.18.10",
+        "nodemon": "^2.0.6",
         "socket.io": "^2.2.0",
         "twig": "^1.13.2"
     },
     "devDependencies": {
-        "eslint": "^5.15.2",
+        "eslint": "^7.15.0",
         "eslint-config-google": "^0.11.0"
     }
 }
